// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`endRideModal Renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderColor": "black",
          "borderRadius": 20,
          "borderWidth": 1,
          "flex": 0.4,
          "height": 100,
          "justifyContent": "center",
          "marginBottom": 30,
          "padding": 30,
          "width": "90%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 25,
            "fontWeight": "bold",
            "marginRight": "auto",
          }
        }
      >
        Vill du avsluta resan?
      </Text>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2A9D8F",
            "borderRadius": 10,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": "90%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 25,
              "fontWeight": "bold",
            }
          }
        >
          Bekräfta
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#BF3721",
            "borderRadius": 10,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": "90%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 25,
              "fontWeight": "bold",
            }
          }
        >
          Avbryt
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`modalPopup Renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "padding": 20,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#fff",
          "borderColor": "black",
          "borderRadius": 20,
          "borderWidth": 1,
          "flex": 0.4,
          "height": 100,
          "justifyContent": "center",
          "marginBottom": 30,
          "padding": 30,
          "width": "90%",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 25,
            "fontWeight": "bold",
            "marginRight": "auto",
          }
        }
      >
        Hur mycket vill du lägga in?
      </Text>
      <TextInput
        keyboardType="numeric"
        placeholder="Summa"
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 5,
            "borderWidth": 1,
            "height": 30,
            "marginTop": 20,
            "width": "50%",
          }
        }
      />
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#2A9D8F",
            "borderRadius": 10,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": "90%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 25,
              "fontWeight": "bold",
            }
          }
        >
          Bekräfta
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#BF3721",
            "borderRadius": 10,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 20,
            "width": "90%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 25,
              "fontWeight": "bold",
            }
          }
        >
          Avbryt
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`qrModal Renders correctly 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  transparent={true}
  visible={true}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(189, 195, 199, .5);",
        "borderRadius": 30,
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      style={
        Object {
          "borderColor": "black",
          "borderRadius": 30,
          "borderWidth": 2,
          "height": 300,
          "overflow": "hidden",
          "width": 300,
        }
      }
    >
      <ViewManagerAdapter_ExpoBarCodeScannerView
        onBarCodeScanned={[Function]}
        proxiedProperties={
          Object {
            "barCodeTypes": Array [],
            "type": undefined,
          }
        }
        style={
          Object {
            "height": 300,
            "width": 300,
          }
        }
      />
    </View>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#BF3721",
          "borderRadius": 10,
          "height": 50,
          "justifyContent": "center",
          "marginTop": 20,
          "width": 200,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "white",
            "fontSize": 25,
            "fontWeight": "bold",
          }
        }
      >
        Avbryt
      </Text>
    </View>
  </View>
</Modal>
`;
